[package]
name = "Audioplayer"
version = "0.4.0"
description = "AudioPlayer for Corro-Kun"
authors = ["Kevin Stiven Pava Correales"]
license = "BSD 4-Clause"
repository = "https://github.com/Corro-Kun/Audioplayer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "app-all", "protocol-asset", "path-all", "fs-read-file", "fs-read-dir", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
